# qslidetext

./: .gitignore  CMakeLists.txt  README.md  TODO
cmake/: GroupByFolder.cmake  QtHelpers.cmake
cmake/share/: FindQSlideText.cmake  QSlideTextConfig.cmake
example/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  qslidetext.cc  qslidetext.h  qslidetext_config.h  qslidetext_p.h
src/plugins/: CMakeLists.txt  qslidetextplugin.cc  qwidgetplugin.h
